<resources>
    <string name="Tip_calculator">Tip Calculator</string>
    <string name="summary_subtitle">See below the summary of your bill</string>
    <string name="ten_percent">10%</string>
    <string name="fiveten_percent">15%</string>
    <string name="twenty_percent">20%</string>
    <string name="total_table">Total table:</string>
    <string name="num_of_people">Number of people:</string>
    <string name="percentage">Percentage:</string>
    <string name="total">TOTAL</string>
    <string name="done">Done</string>
    <string name="main_subtitle">Fulfill all the fields below</string>
    <string name="type_the_value_of_your_bill">type the value of your bill:</string>
    <string name="ex_100_00"> $ 100,00</string>
    <string name="calculate">Calculate</string>
    <string name="Clean">Clean</string>
    <string name="Summary">Summary</string>
    <string name="_5">5</string>
    <string name="_10">"10%"</string>

    <style name="RoundedTextInputLayout" parent="Widget.Material3.TextInputLayout.OutlinedBox">
        <item name="boxCornerRadiusTopStart">16dp</item>
        <item name="boxCornerRadiusTopEnd">16dp</item>
        <item name="boxCornerRadiusBottomStart">16dp</item>
        <item name="boxCornerRadiusBottomEnd">16dp</item>

    </style>

</resources>