<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background_primary"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Tv_title"
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/Tip_calculator"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Tv_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/main_subtitle"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tv_title" />

    <TextView
        android:id="@+id/tv_hint_total_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/type_the_value_of_your_bill"
        app:layout_constraintStart_toStartOf="@+id/Tv_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/Tv_subtitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        app:layout_constraintEnd_toEndOf="@+id/Tv_subtitle"
        app:layout_constraintStart_toStartOf="@+id/tv_hint_total_table"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint_total_table">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tieTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ex_100_00"
            android:inputType="numberDecimal"
            android:paddingStart="16dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tv_hint_num_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/num_of_people"
        app:layout_constraintStart_toStartOf="@id/til_total"
        app:layout_constraintTop_toBottomOf="@id/til_total" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_num_people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        app:layout_constraintEnd_toEndOf="@+id/Tv_subtitle"
        app:layout_constraintStart_toStartOf="@+id/tv_hint_num_people"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint_num_people">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_num_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_5"
            android:maxLength="3"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"/>

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tv_hint_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Percentage:"
        app:layout_constraintStart_toStartOf="@+id/til_num_people"
        app:layout_constraintTop_toBottomOf="@+id/til_num_people" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        app:layout_constraintEnd_toEndOf="@+id/Tv_subtitle"
        app:layout_constraintStart_toStartOf="@+id/tv_hint_percentage"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint_percentage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_10"
            android:textColor="@color/black"
            android:inputType="number"
            android:maxLength="3"
            android:textSize="24sp"
            android:textStyle="bold"/>

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_limpar"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/Clean"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline" />


</androidx.constraintlayout.widget.ConstraintLayout>
